--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
       - "master"
   schedule:
     - cron: "35 */5 * * *"
+  workflow_dispatch: {}
 
 env:
   PYFUNCEBLE_AUTO_CONFIGURATION: "YES"
@@ -24,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version:
-          - "3.11"
+          - "3.12"
         os:
           - ubuntu-latest
 
